test/deprecated/Time/DateTimeEnumRename1.good
DateTimeEnumRename1.chpl:3: error: 'DayOfWeek' was renamed. Please use 'dayOfWeek' instead
