test/deprecated/Time/DateTimeEnumRename1.chpl
use Time;

var dow: DayOfWeek;
